fiddling with it

--- a/index.html
+++ b/index.html
@@ -3,55 +3,108 @@
 	<head>
 		<title>blockey reader</title>
 		<style type="text/css">
+			textarea {
+				width: 100%;
+			}
+			hr {
+				position: relative;
+    			border: none;
+				height: 5px;
+			}
 			.input-color {
 	    		position: relative;
-				}
+			}
+			.input-color:hover {
+	    		background-color:#ccc;
+			}
 			.input-color .text {
-	    		padding-left: 25%;
+	    		padding-left: 3%;
+	    		padding-bottom: 0px;
+	    		top: 0px;
+	    		display: inline-block;
 			}
 			.input-color .color-box {
-	    		width: 20%;
+	    		width: 3%;
 	    		height: 100%;
 	    		display: inline-block;
 	    		background-color: #ccc;
 	    		position: absolute;
-	    		left: 5px;	    		
-	    		top: -2.5px;
+	    		top: 0px;
+			}
+			.reloadButton {
+				width: 100%;
 			}
 		</style>
 
 	</head>
 	<body>
-		<input type = "text" id = "input" value = "paste your .blockkey file's content here" onpaste="loadList();loadList();"/>
-		<div id="list">
-		</div>
+		<textarea id="drop_zone" onpaste="reloadButton();">Drop your .blockkey file (or paste it's content) here</textarea><br>
+		<button class="reloadButton" onclick="reloadButton();">(Re)load</button>
+		<br>
+		<div id="list"> </div>
 	</body>
 </html>
 
 <script>
+	var dropzone = document.getElementById('drop_zone');
+	var list = document.getElementById("list");
 	function loadList() {
-		let list = document.getElementById("list");
-		try {
-			let blockey = document.getElementById('input').value;
-			let json = JSON.parse(blockey);
+		try { 
+			let json = JSON.parse(dropzone.value);
 			list.innerHTML = '';
 			for (let i in json.blockKey) {
-				let lazyObj = json.blockKey[i]
+				let obj = json.blockKey[i]
 
-				let rgb = 'rgb(' + lazyObj.value.toString().slice(0, -4) + ')';
-				let revrgb = 'rgb(' + (255 - lazyObj.value[0]) + ',' + (255 - lazyObj.value[1]) + ',' + (255 - lazyObj.value[2]) + ')'
+				let rgb = 'rgb(' + obj.value.toString().slice(0, -4) + ')';
+				//let revrgb = 'rgb(' + (255 - obj.value[0]) + ',' + (255 - obj.value[1]) + ',' + (255 - obj.value[2]) + ')'
 
-				lazyObj.value = lazyObj.value.toString().replace(/,/g, ', ')
-				let s = JSON.stringify(lazyObj, null, "&emsp;").replace(/(?:\r\n|\r|\n)/g, '<br />');
+				obj.value = obj.value.toString().replace(/,/g, ', ')
+				let s = JSON.stringify(obj, null, "&emsp;").replace(/(?:\r\n|\r|\n)/g, '<br />');
 
-				list.innerHTML += '<hr><div class="input-color"><div class="text"><details> <summary>' + lazyObj.object + '</summary><p>' + s + '</p> </div><div class="color-box" style="background-color:' + rgb +'"></div></div>'
+				//<button class="deleteButton" onclick="deleteButton(' + i + ');">X</button><div class="text">
+				list.innerHTML += '<div class="input-color" id="'+ i +'" style="border-top:5px ' + rgb + '; border-style: solid none; border-bottom-style: none;"><div class="color-box" style="background-color:' + rgb +'"></div><div class="text"><details> <summary>' + obj.object + '</summary><div class="textobj">' + s + '</div></div></div>'
 
 			}
 		}
 		catch(err) {
 			list.innerHTML = "it borke, chances are it was a JSON parsing error, please try <a href='jsonlint.com'>https://jsonlint.com</a>";
-			console.log("aaAAA", err)
+			console.log(err, '\nDropzone content: ', dropzone.value)
 		} 
 	}
-	loadList()
+	function deleteButton(i) {
+ 		var elem = document.getElementById(i);
+ 		elem.parentNode.removeChild(elem);
+	}
+	function reloadButton() {
+		if (dropzone.value != "" && dropzone.value != "Drop your .blockkey file (or paste it's content) here") {
+			setTimeout(loadList, 500);
+		}
+	}
+
+	// https://stackoverflow.com/questions/12214057/drag-n-drop-text-file
+	function handleFileSelect(evt) {
+	    evt.stopPropagation();
+	    evt.preventDefault();
+
+	    var files = evt.dataTransfer.files; // FileList object.
+	    var reader = new FileReader();  
+	    reader.onload = function(event) {            
+	         document.getElementById('drop_zone').value = event.target.result;
+	    }        
+	    reader.readAsText(files[0],"UTF-8");
+	    reloadButton();
+	  }
+
+	  function handleDragOver(evt) {
+	    evt.stopPropagation();
+	    evt.preventDefault();
+	    evt.dataTransfer.dropEffect = 'copy'; // Explicitly show this is a copy.
+	  }
+
+	  // Setup the dnd listeners.
+	  dropzone.addEventListener('dragover', handleDragOver, false);
+	  dropzone.addEventListener('drop', handleFileSelect, false);
+	  dropzone.addEventListener('paste', reloadButton, false);
+
+	reloadButton();
 </script>
